[package]
name = "eo"
version = "0.0.1"
authors = ["Richard Leek <richard@richardleek.com>"]
description = "Data structures and methods for Endless Online"
edition = "2018"
license = "MIT"
repository = "https://github.com/sorokya/eo"
readme = "README.md"

[features]
use_serde = ["serde"]

[dependencies]
log = "0.4"
enum-primitive-derive = "0.2"
num-traits = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"], optional = true }
