[package]
name = "eo"
version = "0.0.3-archived"
authors = ["Richard Leek <richard@richardleek.com>"]
description = "Data structures and methods for Endless Online"
edition = "2018"
license = "MIT"
repository = "https://github.com/sorokya/eo"
readme = "README.md"

[features]
use_serde = ["serde"]
generate_protocol = ["npm_rs"]

[dependencies]
bytes = "1"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
npm_rs = {version = "1.0.0", optional = true }
